[Pattern Library] Fix squished sale listings #173618329 (#127)
* fix table pricing (hero is broken)

* fix hero table

* fix duplicate class name

* Move breakpoint from medium to large

* rename to with-mobile-styling-at-large-breakpoint

--- a/public/toolkit/styles/atoms/_tables.scss
+++ b/public/toolkit/styles/atoms/_tables.scss
@@ -2,10 +2,21 @@ $td-reserved-light: lighten($splash-tint, 10%);
 $td-reserved-lighter: lighten($splash-tint, 11%);
 $td-reserved-inset: inset 3px 0px 0px 0px rgba(255,102,39,1);
 
+// AMI table treats medium widths as small, need to use custom responsive text function.
+@mixin responsive-ami-text-size($text-size) {
+  @include text-size($text-size, 'small');
+
+  @if map-has-key(text-breakpoints-for($text-size), 'medium') {
+    @include respond-above('x-large') {
+      @include text-size($text-size, 'medium');
+    }
+  }
+}
+
 @mixin income-label-style {
   color: $charcoal;
   font-family: $alt-font-family;
-  @include responsive-text-size('small');
+  @include responsive-ami-text-size('small');
 }
 
 .th {
@@ -148,7 +159,7 @@ table {
 
   &.td-nowrap {
     tbody tr td {
-      @media #{$medium-up} {
+      @media #{$xlarge-up} {
         white-space: nowrap;
       }
     }
@@ -156,7 +167,7 @@ table {
 
   &.th-nowrap {
     thead tr th {
-      @media #{$medium-up} {
+      @media #{$xlarge-up} {
         white-space: nowrap;
       }
     }
@@ -276,14 +287,6 @@ table {
   .scrollable-table-nested.expand-wide {
     width: calc(100vw - 4rem);
 
-    @media #{$medium-up} {
-      width: calc(100vw - 12rem);
-    }
-
-    @media #{$large-up} {
-      width: calc(100vw - 18rem);
-    }
-
     @media #{$xlarge-up} {
       width: auto;
     }
@@ -310,7 +313,7 @@ table {
       }
     }
 
-    // support resverved unit tinting within flexible table
+    // support reserved unit tinting within flexible table
     &.tr-reserved {
       @media #{$small-only} {
         td {
@@ -414,14 +417,21 @@ table {
 // Pricing tables
 
 .table-pricing-ami {
-  @include responsive-text-size('gamma');
+  @include responsive-ami-text-size('gamma');
   position: relative;
 
   .table-pricing-wrapper + & {
     margin-top: 2rem;
   }
 
-  @media #{$medium-up} {
+  .td, th {
+    @media (max-width: $large-breakpoint) {
+      padding-left: $table-padding-small;
+      padding-right: $table-padding-small;
+    }
+  }
+
+  @media #{$large-up} {
     @include scut-padding(0 n 0 n);
     background-color: transparent;
     border-bottom: 0;
@@ -441,7 +451,7 @@ table {
   top: 0.25rem;
   left: 0;
   font-family: $alt-font-family;
-  @include responsive-text-size('base');
+  @include responsive-ami-text-size('base');
   line-height: 1;
   font-weight: $t-semi;
 }
@@ -460,14 +470,14 @@ table {
 
   dl {
     font-weight: $t-regular;
-    @include responsive-text-size('base');
+    @include responsive-ami-text-size('base');
     margin: 0;
   }
 
   dt, dd {
     float: left;
     margin-bottom: 0.25rem;
-    @include responsive-text-size('small');
+    @include responsive-ami-text-size('small');
 
     strong {
       font-weight: $t-semi;
@@ -483,7 +493,7 @@ table {
 
   th, td::before {
     color: $steel;
-    @include responsive-text-size('small');
+    @include responsive-ami-text-size('small');
     font-family: $alt-font-family;
   }
 
@@ -520,7 +530,7 @@ table {
 
   td {
     padding: 0.75rem 0;
-    @include responsive-text-size('base');
+    @include responsive-ami-text-size('base');
     font-feature-settings: "tnum";
     vertical-align: top;
 
@@ -537,9 +547,9 @@ table {
     }
   }
 
-  // Number of availably units
+  // Number of available units
   i {
-    @include responsive-text-size('delta');
+    @include responsive-ami-text-size('delta');
     color: $jet;
     font-style: normal;
     font-weight: $t-regular;
@@ -548,7 +558,7 @@ table {
 
   small {
     display: block;
-    @include responsive-text-size('tiny');
+    @include responsive-ami-text-size('tiny');
     color: $steel;
     text-transform: none;
     letter-spacing: 0;
@@ -562,14 +572,14 @@ table {
 
 .table-pricing-rent {
   th:last-child,
-  td[data-th="Rent"], {
+  td[data-th="Rent"] {
     text-align: right;
   }
 }
 
 .table-pricing-sale-lease {
   th:last-child,
-  td[data-th="Optional parking lease"], {
+  td[data-th="Optional parking lease"] {
     text-align: right;
   }
 }
@@ -623,17 +633,23 @@ table {
   }
 }
 
-@media #{$medium-up} {
-  td.cell-show-small-only {
+@media #{$xlarge-up} {
+  td.cell-hide-xlarge-up {
     display: none !important;
   }
 
-  tr.row-show-small-only {
+  tr.row-hide-xlarge-up {
     display: none !important;
   }
 }
 
-@media #{$small-only} {
+@media (max-width: $large-breakpoint) {
+  td.cell-show-xlarge-up {
+    display: none !important;
+  }
+}
+
+@mixin mobile-table-styling {
   .table-pricing-wrapper {
     margin-top: 0;
   }
@@ -663,10 +679,6 @@ table {
     td,
     tbody {
       display: block;
-    }
-
-    td.cell-hide-small-only {
-      display: none !important;
     }
 
     tr {
@@ -722,11 +734,10 @@ table {
       &.is-nested {
         padding-left: 1rem;
       }
-
     }
 
     i {
-      @include responsive-text-size('base');
+      @include responsive-ami-text-size('base');
       font-weight: $t-semi;
     }
 
@@ -780,5 +791,15 @@ table {
 
   .pricing-table-waitlist {
     padding: 0.5rem 0;
+  }
+}
+
+@media #{$small-only} {
+  @include mobile-table-styling()
+}
+
+@media (max-width: $large-breakpoint) {
+  .with-mobile-styling-at-large-breakpoint {
+    @include mobile-table-styling()
   }
 }
